// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@theme/r-material: core/components: RoutingItemList # should mount routing item component with child correctly 1`] = `
<WithStyles(ForwardRef(List))
  className="makeStyles-root-1"
  component="nav"
  dense={true}
>
  <WithStyles(ForwardRef(ListItem))
    aria-label="Toggle Menu"
    button={true}
    component="div"
    onClick={[Function]}
  >
    <WithStyles(ForwardRef(ListItemIcon))>
      <BundledIcon
        type="menu"
      />
    </WithStyles(ForwardRef(ListItemIcon))>
    <WithStyles(ForwardRef(ListItemText))
      primary="mockName"
    />
    <BundledIcon
      type="expandMore"
    />
  </WithStyles(ForwardRef(ListItem))>
  <WithStyles(ForwardRef(Collapse))
    in={false}
    timeout="auto"
  >
    <WithStyles(ForwardRef(List))
      component="div"
      dense={true}
      disablePadding={true}
    >
      <RoutingItem
        key="0"
        link="/to/some-else"
        name="mock-sub-name"
      />
      <RoutingItem
        key="1"
        link="/to/bar"
        name="mock-other-sub-name"
      />
    </WithStyles(ForwardRef(List))>
  </WithStyles(ForwardRef(Collapse))>
</WithStyles(ForwardRef(List))>
`;

exports[`@theme/r-material: core/components: RoutingItemList # should mount routing item component without child correctly 1`] = `
<WithStyles(ForwardRef(List))
  className="makeStyles-root-1"
  component="nav"
  dense={true}
>
  <WithStyles(ForwardRef(ListItem))
    aria-label="Toggle Menu"
    button={true}
    component="div"
    onClick={[Function]}
  >
    <WithStyles(ForwardRef(ListItemIcon))>
      <BundledIcon
        type="menu"
      />
    </WithStyles(ForwardRef(ListItemIcon))>
    <WithStyles(ForwardRef(ListItemText))
      primary="mockName"
    />
    <BundledIcon
      type="expandMore"
    />
  </WithStyles(ForwardRef(ListItem))>
  <WithStyles(ForwardRef(Collapse))
    in={false}
    timeout="auto"
  >
    <WithStyles(ForwardRef(List))
      component="div"
      dense={true}
      disablePadding={true}
    />
  </WithStyles(ForwardRef(Collapse))>
</WithStyles(ForwardRef(List))>
`;

exports[`@theme/r-material: core/components: RoutingItemList # should mount routing item component without icon correctly 1`] = `
<WithStyles(ForwardRef(List))
  className="makeStyles-root-1"
  component="nav"
  dense={true}
>
  <WithStyles(ForwardRef(ListItem))
    aria-label="Toggle Menu"
    button={true}
    component="div"
    onClick={[Function]}
  >
    <WithStyles(ForwardRef(ListItemIcon))>
      <BundledIcon
        type="menu"
      />
    </WithStyles(ForwardRef(ListItemIcon))>
    <WithStyles(ForwardRef(ListItemText))
      primary="mockName"
    />
    <BundledIcon
      type="expandMore"
    />
  </WithStyles(ForwardRef(ListItem))>
  <WithStyles(ForwardRef(Collapse))
    in={false}
    timeout="auto"
  >
    <WithStyles(ForwardRef(List))
      component="div"
      dense={true}
      disablePadding={true}
    />
  </WithStyles(ForwardRef(Collapse))>
</WithStyles(ForwardRef(List))>
`;
